Troisieme commit (modification legere)

--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
                             <div class="navbar__menu-list">
                                 <div id="w-node-d7c7a1c2-aedf-f086-6e1f-b8c1a40b1714-b88f48cd" class="navbar__menu-item">
                                     <div id="w-node-b27d9e84-85e2-4070-4323-4db5d713c934-b88f48cd" class="navbar__menu-glyph text-size-large">↠</div>
-                                    <a id="w-node-ff5fcea1-d939-f782-f34f-1d1e81bbfefe-b88f48cd" href="home.html" class="navbar__menu-inner w-inline-block">
+                                    <a id="w-node-ff5fcea1-d939-f782-f34f-1d1e81bbfefe-b88f48cd" href="index.html" class="navbar__menu-inner w-inline-block">
                                         <div class="navbar__menu-text text-size-large">Home</div>
                                         <div class="navbar__menu-line"></div>
                                     </a>
