--- a/index.html
+++ b/index.html
@@ -272,10 +272,10 @@
                                             </div>
                                             <div id="w-node-_1ad57502-b863-4956-f399-237c27d487ce-27d487ba" class="services__item-details">
                                                 <div class="services__details-wrapper">
-                                                    <div class="services__item-text text-size-small">Website</div>
+                                                    <div class="services__item-text text-size-small">Website,</div>
                                                 </div>
                                                 <div class="services__details-wrapper">
-                                                    <div class="services__item-text text-size-small">Mobile app</div>
+                                                    <div class="services__item-text text-size-small">Mobile app,</div>
                                                 </div>
                                                 <div class="services__details-wrapper">
                                                     <div class="services__item-text text-size-small">Interactive experiences</div>
@@ -293,10 +293,10 @@
                                             </div>
                                             <div id="w-node-_1ad57502-b863-4956-f399-237c27d487ce-27d487ba" class="services__item-details">
                                                 <div class="services__details-wrapper">
-                                                    <div class="services__item-text text-size-small">Brand Srategy</div>
+                                                    <div class="services__item-text text-size-small">Brand Srategy,</div>
                                                 </div>
                                                 <div class="services__details-wrapper">
-                                                    <div class="services__item-text text-size-small">Visual Identity</div>
+                                                    <div class="services__item-text text-size-small">Visual Identity,</div>
                                                 </div>
                                                 <div class="services__details-wrapper">
                                                     <div class="services__item-text text-size-small">Logo Design</div>
@@ -314,7 +314,7 @@
                                             </div>
                                             <div id="w-node-_1ad57502-b863-4956-f399-237c27d487ce-27d487ba" class="services__item-details">
                                                 <div class="services__details-wrapper">
-                                                    <div class="services__item-text text-size-small">Online Stores</div>
+                                                    <div class="services__item-text text-size-small">Online Stores,</div>
                                                 </div>
                                                 <div class="services__details-wrapper">
                                                     <div class="services__item-text text-size-small">Payement Intergration</div>
